crates/validation/tests/snapshots/scenario_tests__capture_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/catalog.yaml#/captures/0,
        error: capture captureEndpoint/placeholder/testing/int-string has a duplicated definition at test://example/int-string-capture#/captures/0,
    },
]
