crates/validation/tests/snapshots/scenario_tests__collection_key_empty.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/int-string#/collections/testing~1int-string,
        error: collection testing/int-string key cannot be empty,
    },
]
